add contactforms and css

--- a/web/themes/custom/mytheme/templates/page.html.twig
+++ b/web/themes/custom/mytheme/templates/page.html.twig
@@ -31,7 +31,7 @@
   <main id="main-content">
     <section id="about">
       <h2>About Me</h2>
-      <p><img src="/sites/default/files/IMG_4899_0.jpg" height="333" alt="Picture of Toshifumi Kamino" width="500"></p>
+      <p id="about-img"><img src="/sites/default/files/IMG_4899_0.jpg" height="333" alt="Picture of Toshifumi Kamino" width="500"></p>
       <p id="about-text">Hi! I'm Toshifumi Kamino — a creative individual with both Norwegian and Japanese roots. My journey began in Japan, where I studied violin making and repair at a vocational school, gaining hands-on skills in crafting and restoring violins, violas, and cellos.</p>
       <p id="about-text">After graduating, I moved to Norway and attended a Folkehøyskole to explore my interest in hunting and fishing. Over time, my passion shifted toward digital creativity — especially web design and video editing.</p>
       <p id="about-text">I launched a personal blog using WordPress to share photos and videos, which I edit myself. This sparked a deep interest in IT and digital tools, motivating me to pursue further learning. I started with Cyberlink and later advanced to Adobe Premiere Pro and After Effects, gaining experience in basic editing, color grading, and smooth transitions.</p>
@@ -104,10 +104,12 @@
     </section>
 
     {# Contact Form #}
-    <section id="contact">
-      <h2>Contact Me</h2>
-    {# Add Contactform later #}
-    </section>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-form-container">
+    </div>
+  </section>
+
   </main>
 
     {# Footer #}
