--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -97,6 +97,11 @@ section {
   text-align: center;
 }
 
+#about-img {
+  object-fit: cover;
+  border-radius: 50%;   
+}
+
 #about {
   margin: auto;
 }
@@ -225,6 +230,58 @@ section {
 #contact {
   text-align: center;
 }
+
+.contact-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem auto;
+  max-width: 100%;
+}
+
+.contact-form {
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  background-color: #272727;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  color: white;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.contact-form textarea {
+  height: 150px;
+  resize: vertical;
+}
+
+.contact-form button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.contact-form button:hover {
+  background-color: #0056b3;
+}
+
 
 /*Footer*/
 footer {
