Create 'contact_forms' category for Contact Form on Pantheon and verify frontend display

--- a/web/themes/custom/mytheme/templates/block--mytheme-contactforms.html.twig
+++ b/web/themes/custom/mytheme/templates/block--mytheme-contactforms.html.twig
@@ -1,4 +1,5 @@
-<section id="contact">
-  <h2>Contact Me</h2>
+<div{{ attributes.addClass(classes) }}>
+  <h2>{{ label }}</h2>
+  <pre>{{ dump(content) }}</pre>
   {{ content }}
-</section>
+</div>
