--- a/web/themes/custom/mytheme/templates/page.html.twig
+++ b/web/themes/custom/mytheme/templates/page.html.twig
@@ -102,7 +102,13 @@
     </section>
 
     {# Contact Form #}
-    {{ drupal_entity('contact_form', 'contact_forms') }}
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <div class="contact-form-container">
+        {{ drupal_entity('contact_form', 'contact_forms') }}
+      </div>
+    </section>
+
 
 
 
