add language switcher

--- a/web/themes/custom/mytheme/templates/page.html.twig
+++ b/web/themes/custom/mytheme/templates/page.html.twig
@@ -16,6 +16,9 @@
   <header id="header">
     <div class="header-container">
       <h1>Toshifumi Kamino</h1>
+      
+      {{ drupal_block('language_switcher') }}
+
       <nav aria-label="{{ 'Main Navigation'|t }}">
         <ul class="nav-menu">
           <li><a href="#about">{{ 'About'|t }}</a></li>
