--- a/web/themes/custom/mytheme/templates/page.html.twig
+++ b/web/themes/custom/mytheme/templates/page.html.twig
@@ -16,9 +16,8 @@
   <header id="header">
     <div class="header-container">
       <h1>Toshifumi Kamino</h1>
-
-      {{ drupal_block('mytheme_yanyunoqieritie') }}
-
+      
+      {{ drupal_block('language_switcher_block') }}
 
       <nav aria-label="{{ 'Main Navigation'|t }}">
         <ul class="nav-menu">
