language switrcher in different method

--- a/web/themes/custom/mytheme/templates/page.html.twig
+++ b/web/themes/custom/mytheme/templates/page.html.twig
@@ -17,7 +17,8 @@
     <div class="header-container">
       <h1>Toshifumi Kamino</h1>
       
-      {{ drupal_block('language_switcher_block') }}
+      {{ page.language_switcher }}
+
 
       <nav aria-label="{{ 'Main Navigation'|t }}">
         <ul class="nav-menu">
