--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -55,10 +55,12 @@ section {
 
 .header-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  flex-wrap: wrap; 
+  position: relative;
+  padding-top: 2.5rem;
 }
+
 
 .header-container h1 {
   font-size: 1.8rem;
@@ -70,6 +72,7 @@ section {
   flex-direction: row;
   gap: 20px;
   list-style: none;
+  margin-top: 0.5rem;
   margin: 0;
   padding: 0;
 }
