--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -1,16 +1,70 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+
 html {
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 body {
-  font-family: sans-serif;
-  min-height: 100vh;
+  font-family: 'Lato', sans-serif;
+  height: 100%;
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  background-color: #f9f9f9;
-  color: #333;
+  background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+  color: #fff;
+  overflow: hidden;
 }
+
+/*Background star*/
+@keyframes animStar {
+  from { transform: translateY(0px); }
+  to { transform: translateY(-2000px); }
+}
+
+#stars, #stars2, #stars3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+#stars {
+  width: 1px;
+  height: 1px;
+  background: transparent;
+  box-shadow:
+    100px 300px #FFF, 500px 800px #FFF, 900px 1000px #FFF,
+    1200px 500px #FFF, 1500px 700px #FFF, 1700px 400px #FFF,
+    1900px 900px #FFF;
+  animation: animStar 50s linear infinite;
+}
+
+#stars2 {
+  width: 2px;
+  height: 2px;
+  background: transparent;
+  box-shadow:
+    200px 600px #FFF, 600px 1200px #FFF, 1000px 1500px #FFF,
+    1300px 800px #FFF, 1600px 900px #FFF;
+  animation: animStar 100s linear infinite;
+}
+
+#stars3 {
+  width: 3px;
+  height: 3px;
+  background: transparent;
+  box-shadow:
+    300px 900px #FFF, 700px 1400px #FFF, 1100px 1700px #FFF;
+  animation: animStar 150s linear infinite;
+}
+
+/*Make sure other elements appear in front of the stars*/
+#header, main, #main-content, footer, #contact {
+  position: relative;
+  z-index: 1;
+}
+
 
 h1 {
   color: darkslateblue;
