--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -23,10 +23,11 @@ body {
 }
 
 #stars, #stars2, #stars3 {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 0;
+  height: 2000px;
 }
 
 #stars {
