--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -231,10 +231,15 @@ section {
   text-align: center;
 }
 
-#about-img {
+#about-img img {
+  width: 200px;
+  height: 200px;
   object-fit: cover;
-  border-radius: 50%;   
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
 }
+
 
 #about {
   margin: auto;
