--- a/web/themes/custom/mytheme/templates/page.html.twig
+++ b/web/themes/custom/mytheme/templates/page.html.twig
@@ -42,11 +42,30 @@
 
 
 
-  {# About Me #}
+  
   <main id="main-content">
+
+     {# Top #}
+    <section id="Top">
+      <div class="top-container">
+        <div class="top-text123">
+          <p id="top-text1">{{ "Hey there!"|t }}</p>
+          <p id="top-text2">{{ "I'm Toshifumi"|t }}</p>
+          <p id="top-text3">{{ "I love creating websites and videos."|t }}</p>
+        </div>
+        <div class="top-img">
+          <img src="/sites/default/files/inline-images/Toshi.jpg" alt="{{ 'Picture of Toshifumi Kamino'|t }}">
+        </div>
+      </div>
+    </section>
+
+
+  
+     {# About Me #}
     <section id="about">
+
+      
       <h2>{{ 'About Me'|t }}</h2>
-      <p id="about-img"><img src="/sites/default/files/inline-images/Toshi.jpg" height="333" alt="{{ 'Picture of Toshifumi Kamino'|t }}" width="500"></p>
       <p id="about-text">{{ "Hi! I'm Toshifumi Kamino — a creative individual with both Norwegian and Japanese roots. My journey began in Japan, where I studied violin making and repair at a vocational school, gaining hands-on skills in crafting and restoring violins, violas, and cellos."|t }}</p>
       <p id="about-text">{{ "After graduating, I moved to Norway and attended a Folkehøyskole to explore my interest in hunting and fishing. Over time, my passion shifted toward digital creativity — especially web design and video editing."|t }}</p>
       <p id="about-text">{{ "I launched a personal blog using WordPress to share photos and videos, which I edit myself. This sparked a deep interest in IT and digital tools, motivating me to pursue further learning. I started with Cyberlink and later advanced to Adobe Premiere Pro and After Effects, gaining experience in basic editing, color grading, and smooth transitions."|t }}</p>
