--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -274,6 +274,26 @@ section {
   box-shadow: 0 0 20px rgba(255,255,255,0.3);
 }
 
+/*responsive*/
+@media (max-width: 768px) {
+  .top-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .top-text123 {
+    font-size: 1.8rem;
+    padding-right: 0;
+  }
+
+  .top-img img {
+    width: 250px;
+    height: 250px;
+    margin-top: 2rem;
+  }
+}
+
+
 
 
 /*About Me*/
