--- a/web/themes/custom/mytheme/css/style.css
+++ b/web/themes/custom/mytheme/css/style.css
@@ -249,12 +249,18 @@ section {
 .top-text123 {
   flex: 1;
   color: #fff;
-  font-size: 3rem;
   line-height: 1.5;
   opacity: 1;
   transform: translateX(0);
   transition: all 1s ease;
 }
+
+.top-text123 p {
+  font-size: 3rem;
+  font-weight: 300;
+  margin: 0.5rem 0;
+}
+
 
 /*Top Image*/
 .top-img {
